--- a/scss/_card-box.scss
+++ b/scss/_card-box.scss
@@ -287,6 +287,9 @@
         &-item {
             margin-right: 48px;
             position: relative;
+            &:last-child {
+                margin-right: 25px;
+            }
             &-button,
             .size-button {
                 background: none;
