--- a/scss/_registration.scss
+++ b/scss/_registration.scss
@@ -140,7 +140,7 @@
                         content: "";
                         display: block;
                         position: absolute;
-                        background: url(/img/list-marker.svg);
+                        background: url(../img/list-marker.svg);
                         background-repeat: no-repeat;
                         width: 20px;
                         height: 16px;
