--- a/scss/_cart.scss
+++ b/scss/_cart.scss
@@ -1,19 +1,18 @@
 .cart {
     width: 100%;
     &__container {
-        @include flex(initial, initial);
+        @include flex(space-between, initial);
         margin-top: 96px;
         margin-bottom: 128px;
         &__productbox {
             width: 100%;
+            max-width: 652px;
             margin-right: 25px;
             &__products {
                 margin-bottom: 72px;
                 &__card {
                     @include flex(initial, initial);
-                    max-width: 652px;
                     width: 100%;
-                    max-height: 306px;
                     overflow: hidden;
                     background-color: white;
                     filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
@@ -81,7 +80,7 @@
                                 content: "";
                                 display: block;
                                 position: absolute;
-                                width: 18px;
+                                width: 100%;
                                 height: 2px;
                                 background: $color-cart-card;
                                 left: 0;
@@ -93,7 +92,7 @@
                                 content: "";
                                 display: block;
                                 position: absolute;
-                                width: 18px;
+                                width: 100%;
                                 height: 2px;
                                 background: $color-cart-card;
                                 left: 0;
@@ -119,10 +118,8 @@
             }
             &__buttonbox {
                 @include flex(space-between, initial);
-                &__del-button {
-                    display: block;
-                }
                 .btn-cart {
+                    display: block;
                     background: none;
                     padding: 17px 40px;
                     border: 1px solid #a4a4a4;
@@ -234,7 +231,9 @@
             &__checkout {
                 @include flex(initial, flex-end);
                 flex-direction: column;
-                padding: 40px 44px 42px 44px;
+                max-width: 360px;
+                width: 100%;
+                padding: 40px 37px 42px 44px;
                 background: #f5f3f3;
                 color: $color-grey-cart;
                 text-transform: uppercase;
@@ -265,8 +264,7 @@
                 }
                 &__button {
                     align-self: flex-start;
-                    width: 273px;
-                    height: 50px;
+                    max-width: 273px;
                     padding: 15px 41px;
                     background: $color-pink;
                     color: $color-white;
