--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -20,7 +20,7 @@
             cursor: pointer;
         }
         .btn-product-right {
-            top: 365px;
+            margin: auto 0;
             right: 0;
             &:hover {
                 svg {
@@ -34,7 +34,7 @@
             }
         }
         .btn-product-left {
-            top: 365px;
+            margin: auto 0;
             left: 0;
             &:hover {
                 svg {
@@ -48,7 +48,7 @@
             }
         }
     }
-    .product-container {
+    &-container {
         position: relative;
         top: -65px;
         z-index: 5;
