--- a/css/style.css
+++ b/css/style.css
@@ -1888,7 +1888,8 @@ ul li {
 
 .filter-container .filter-list {
   display: none;
-  width: 360px;
+  max-width: 360px;
+  width: 100%;
   padding: 46px 16px 16px 16px;
   -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
           box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
@@ -2524,7 +2525,7 @@ ul li {
     line-height: 29px;
   }
   .card-box-container {
-    padding-top: 150px;
+    padding-top: 130px;
   }
   .card-box-container-for-card {
     margin: 57px -15px 17px -15px;
