--- a/scss/_card-box.scss
+++ b/scss/_card-box.scss
@@ -195,7 +195,8 @@
         }
         .filter-list {
             display: none;
-            width: 360px;
+            max-width: 360px;
+            width: 100%;
             padding: 46px 16px 16px 16px;
             box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
             position: absolute;
